--- a/style.css
+++ b/style.css
@@ -1,34 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap');
-
 body {
-    font-family: 'Pontano Sans', sans-serif;
+    font-family: Arial, sans-serif;
     text-align: center;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
 }
 
-h1 {
-    color: #333;
-}
-
-.overlay {
+#id-card {
     position: relative;
     display: inline-block;
+    margin-top: 20px;
 }
 
-.overlay img {
-    width: 300px;
+.id-template {
+    width: 400px;
 }
 
-#id-name {
+.id-photo {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 80px;
+    left: 40px;
+    width: 100px;
+    height: 120px;
+    object-fit: cover;
+}
+
+.id-name {
+    position: absolute;
+    top: 220px;
+    left: 160px;
     font-size: 18px;
-    color: black;
     font-weight: bold;
+    color: black;
+}
+
+.id-role {
+    position: absolute;
+    top: 250px;
+    left: 160px;
+    font-size: 14px;
+    color: gray;
 }
 
 .hidden {
